This file lists all the major user-visible changes to nullmailer.
-------------------------------------------------------------------------------
Changes in version 1.04

- Added support in nullmailer-inject for $NULLMAILER_QUEUE to name the
  program which is used to queue messages.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.03

- Fixed the SMTP protocol module to send QUIT on protocol failures.

- Added support for the SMTP AUTH LOGIN method.  Thanks to Sean
  MacLennan for the suggestion.

- Fixed the SMTP protocol module to send EHLO instead of HELO when doing
  authentication.  Thanks to Norbert Tretkowski for pointing this out.

- Fixed compile breakage on Solaris due to use of setenv.

- Fixed netstring length bug in QMQP sending module.

- If the sender name cannot be determined from the environment
  variables, try to pull it from /etc/passwd before using "unknown".
  Thanks Roderick Schertler.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.02

- Fixed bug in SMTP AUTH that would cause SMTP sending to crash with a
  segfault when it was used.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.01

- Added support for SMTP AUTH PLAIN.
  Thanks to Ace Jones for the initial implementation.

- Fixed compile error in lib/list.h

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.00
