@@ -2,6 +2,9 @@ This file lists all the major user-visible changes to nullmailer.
 -------------------------------------------------------------------------------
 Changes in version 1.04
 
+- Added a send timeout in nullmailer-send, to kill sending messages that
+  stall.
+
 - Added support in nullmailer-inject for $NULLMAILER_QUEUE to name the
   program which is used to queue messages.
 
